--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,7 @@
     "**/bower_components": true,
     "packages/node_modules/**": false
   },
-  "eslint.enable": true
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
