--- a/package.json
+++ b/package.json
@@ -55,32 +55,32 @@
     "@babel/runtime-corejs2": "^7.8.3",
     "@formatjs/intl-pluralrules": "^1.5.4",
     "@formatjs/intl-relativetimeformat": "^4.5.11",
-    "@momentum-ui/react": "^23.21.5",
-    "@webex/common": "1.121.0",
-    "@webex/common-timers": "1.121.0",
-    "@webex/components": "^1.47.0",
-    "@webex/helper-html": "1.121.0",
-    "@webex/http-core": "1.121.0",
-    "@webex/internal-plugin-conversation": "1.121.0",
-    "@webex/internal-plugin-encryption": "1.121.0",
-    "@webex/internal-plugin-feature": "1.121.0",
-    "@webex/internal-plugin-flag": "1.121.0",
-    "@webex/internal-plugin-mercury": "1.121.0",
-    "@webex/internal-plugin-metrics": "1.121.0",
-    "@webex/internal-plugin-presence": "1.121.0",
-    "@webex/internal-plugin-search": "1.121.0",
-    "@webex/internal-plugin-team": "1.121.0",
-    "@webex/internal-plugin-user": "1.121.0",
-    "@webex/internal-plugin-wdm": "1.121.0",
-    "@webex/plugin-authorization": "1.121.0",
-    "@webex/plugin-logger": "1.121.0",
-    "@webex/plugin-meetings": "1.121.0",
-    "@webex/plugin-people": "1.121.0",
-    "@webex/plugin-rooms": "1.121.0",
-    "@webex/sdk-component-adapter": "^1.26.2",
-    "@webex/storage-adapter-local-forage": "1.121.0",
-    "@webex/storage-adapter-local-storage": "1.121.0",
-    "@webex/webex-core": "1.121.0",
+    "@momentum-ui/react": "23.24.5",
+    "@webex/common": "1.125.5",
+    "@webex/common-timers": "1.125.5",
+    "@webex/components": "1.69.1",
+    "@webex/helper-html": "1.125.5",
+    "@webex/http-core": "1.125.5",
+    "@webex/internal-plugin-conversation": "1.125.5",
+    "@webex/internal-plugin-encryption": "1.125.5",
+    "@webex/internal-plugin-feature": "1.125.5",
+    "@webex/internal-plugin-flag": "1.125.5",
+    "@webex/internal-plugin-mercury": "1.125.5",
+    "@webex/internal-plugin-metrics": "1.125.5",
+    "@webex/internal-plugin-presence": "1.125.5",
+    "@webex/internal-plugin-search": "1.125.5",
+    "@webex/internal-plugin-team": "1.125.5",
+    "@webex/internal-plugin-user": "1.125.5",
+    "@webex/internal-plugin-wdm": "1.125.5",
+    "@webex/plugin-authorization": "1.125.5",
+    "@webex/plugin-logger": "1.125.5",
+    "@webex/plugin-meetings": "1.125.5",
+    "@webex/plugin-people": "1.125.5",
+    "@webex/plugin-rooms": "1.125.5",
+    "@webex/sdk-component-adapter": "1.35.0",
+    "@webex/storage-adapter-local-forage": "1.125.5",
+    "@webex/storage-adapter-local-storage": "1.125.5",
+    "@webex/webex-core": "1.125.5",
     "adaptivecards": "^2.0.0",
     "ampersand-events": "^2.0.2",
     "bytestreamjs": "^1.0.29",
